--- a/branching-wizard.html
+++ b/branching-wizard.html
@@ -1,5 +1,5 @@
 <!--
-A `branching-wizard`is a wizard control with branching option.
+A `branching-wizard` is a wizard control with branching option.
 
 When you set the branch attribute for a wizard-step. The wizard-step will only be shown when the wizard is at the corresponding branch. If there is no branch attribute set for a wizard-step, the wizard-step will be shown.
 
@@ -89,7 +89,7 @@ Fired when the `previous` button is clicked. You can prevent step changing by se
       activeStepIndex: 0,
 
       /**
-       * Gets or sets a boolean indicating whether to display a Cancel button. 
+       * Gets or sets a boolean indicating whether to display a `cancel` button. 
        *
        * @attribute displayCancelButton
        * @type boolean
