--- a/branching-wizard.html
+++ b/branching-wizard.html
@@ -55,8 +55,8 @@ Fired when the `previous` button is clicked. You can prevent step changing by se
   @param {number} detail.wizardStepIndex the index of the wizard-step element.
 -->
 
-<link rel="import" href="bower_components/polymer/polymer.html">
-<link rel="import" href="bower_components/core-animated-pages/core-animated-pages.html" >
+<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../core-animated-pages/core-animated-pages.html" >
 
 <polymer-element name="branching-wizard" attributes="activeStepIndex, displayCancelButton, cancelButtonText, previousButtonText, nextButtonText, finishButtonText, branch, transitions">
 
