--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>branching-wizard demo</title>
-<script src="bower_components/platform/platform.js"></script>
+<script src="../platform/platform.js"></script>
   <link rel="import" href="branching-wizard.html">
 
   <style>
