--- a/branching-wizard.html
+++ b/branching-wizard.html
@@ -150,9 +150,9 @@ Fired when the `previous` button is clicked. You can prevent step changing by se
     previous: function(){
       var selectedIndex = this.$.wizard.selected,
           wizardSteps = this.children;
-      console.log(wizardSteps);
+
       var e = this.fire("previousButtonClick", {wizardStep: wizardSteps[selectedIndex], wizardStepIndex: selectedIndex});
-      if(e.returnValue){
+      if(e.returnValue != false){
         do{
           selectedIndex--;
         }while(selectedIndex > -1 && wizardSteps[selectedIndex].branch && wizardSteps[selectedIndex].branch!=(this.branch));
@@ -165,10 +165,10 @@ Fired when the `previous` button is clicked. You can prevent step changing by se
 
     next: function(){
       var selectedIndex = this.$.wizard.selected,
-          wizardSteps = this.children;
-      console.log(wizardSteps);
+          wizardSteps = this.$.wizard.items;
+
       var e = this.fire("nextButtonClick", {wizardStep: wizardSteps[selectedIndex], wizardStepIndex: selectedIndex});
-      if(e.returnValue){
+      if(e.returnValue != false){
         do{
           selectedIndex++;
         }while(selectedIndex < wizardSteps.length && wizardSteps[selectedIndex].branch && wizardSteps[selectedIndex].branch!=(this.branch));
